Various enhancments - Handled unknown page, sorting blogroll, hide git in sitemap, upgraded deps, etc...